// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`themes Custom tag renders as expected 1`] = `
<div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-13"
      className="txt-bold round inline-block cursor-default bg-red-light color-red-dark border--red txt-s border px6"
    >
      Limited access
    </div>
    <div
      className="hide-visually"
      id="tooltip-13"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        Contact us for access to this feature.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-14"
      className="txt-bold round inline-block cursor-default bg-red-light color-red-dark border--red txt-xs px6"
    >
      Limited access
    </div>
    <div
      className="hide-visually"
      id="tooltip-14"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        Contact us for access to this feature.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-15"
      className="txt-bold round inline-block cursor-default bg-red-light color-red-dark border--red txt-s border"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-contact"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-15"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        Contact us for access to this feature.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-16"
      className="txt-bold round inline-block cursor-default bg-red-light color-red-dark border--red txt-xs"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-contact"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-16"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        Contact us for access to this feature.
      </div>
    </div>
  </div>
</div>
`;

exports[`themes Default renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-gray-faint color-text"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-gray-lighter round-full color-gray flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-book"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Note
    </div>
    Default note
  </div>
</div>
`;

exports[`themes beta renders as expected 1`] = `
<div>
  <div
    className="dr-ui--note py18 px18 round flex mb18 bg-blue-faint color-blue-dark"
  >
    <div
      className="mr18 none block-mm pt3"
    >
      <div
        className="bg-blue-lighter round-full color-blue flex flex--center-main flex--center-cross"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="events-none icon"
          focusable="false"
          role="presentation"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <use
            xlinkHref="#icon-lightning"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </div>
    </div>
    <div
      className="w-full prose"
    >
      <div
        className="txt-bold mb6"
      >
        Beta
      </div>
      Beta note.
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-1"
      className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-s border px6"
    >
      Beta
    </div>
    <div
      className="hide-visually"
      id="tooltip-1"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is in public beta and is subject to changes.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-2"
      className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-xs px6"
    >
      Beta
    </div>
    <div
      className="hide-visually"
      id="tooltip-2"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is in public beta and is subject to changes.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-3"
      className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-s border"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-lightning"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-3"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is in public beta and is subject to changes.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-4"
      className="txt-bold round inline-block cursor-default bg-blue-faint color-blue-dark border--blue-dark txt-xs"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-lightning"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-4"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is in public beta and is subject to changes.
      </div>
    </div>
  </div>
</div>
`;

exports[`themes download renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-purple-faint color-purple-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-purple-lighter round-full color-purple flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-arrow-down"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Download
    </div>
    download note
  </div>
</div>
`;

exports[`themes error renders as expected 1`] = `
<div
  className="dr-ui--note py18 px18 round flex mb18 bg-red-faint color-red-dark"
>
  <div
    className="mr18 none block-mm pt3"
  >
    <div
      className="bg-red-lighter round-full color-red flex flex--center-main flex--center-cross"
      style={
        Object {
          "height": 50,
          "width": 50,
        }
      }
    >
      <svg
        className="events-none icon"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 40,
            "width": 40,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
  </div>
  <div
    className="w-full prose"
  >
    <div
      className="txt-bold mb6"
    >
      Error
    </div>
    error note
  </div>
</div>
`;

exports[`themes fundamentals renders as expected 1`] = `
<div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-9"
      className="txt-bold round inline-block cursor-default bg-pink-faint color-pink-dark border--pink-dark txt-s border px6"
    >
      Fundamentals
    </div>
    <div
      className="hide-visually"
      id="tooltip-9"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        The concepts described here are fundamental to using this product.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-10"
      className="txt-bold round inline-block cursor-default bg-pink-faint color-pink-dark border--pink-dark txt-xs px6"
    >
      Fundamentals
    </div>
    <div
      className="hide-visually"
      id="tooltip-10"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        The concepts described here are fundamental to using this product.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-11"
      className="txt-bold round inline-block cursor-default bg-pink-faint color-pink-dark border--pink-dark txt-s border"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-bookmark"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-11"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        The concepts described here are fundamental to using this product.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-12"
      className="txt-bold round inline-block cursor-default bg-pink-faint color-pink-dark border--pink-dark txt-xs"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-bookmark"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-12"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        The concepts described here are fundamental to using this product.
      </div>
    </div>
  </div>
</div>
`;

exports[`themes legacy or warning renders as expected 1`] = `
<div>
  <div
    className="dr-ui--note py18 px18 round flex mb18 bg-orange-faint color-orange-dark"
  >
    <div
      className="mr18 none block-mm pt3"
    >
      <div
        className="bg-orange-lighter round-full color-orange flex flex--center-main flex--center-cross"
        style={
          Object {
            "height": 50,
            "width": 50,
          }
        }
      >
        <svg
          className="events-none icon"
          focusable="false"
          role="presentation"
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        >
          <use
            xlinkHref="#icon-alert"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          />
        </svg>
      </div>
    </div>
    <div
      className="w-full prose"
    >
      <div
        className="txt-bold mb6"
      >
        Legacy
      </div>
      legacy note
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-5"
      className="txt-bold round inline-block cursor-default bg-orange-faint color-orange-dark border--orange-dark txt-s border px6"
    >
      Legacy
    </div>
    <div
      className="hide-visually"
      id="tooltip-5"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is no longer in active development.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-6"
      className="txt-bold round inline-block cursor-default bg-orange-faint color-orange-dark border--orange-dark txt-xs px6"
    >
      Legacy
    </div>
    <div
      className="hide-visually"
      id="tooltip-6"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is no longer in active development.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-7"
      className="txt-bold round inline-block cursor-default bg-orange-faint color-orange-dark border--orange-dark txt-s border"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-7"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is no longer in active development.
      </div>
    </div>
  </div>
  <div
    className="inline-block"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
  >
    <div
      aria-describedby="tooltip-8"
      className="txt-bold round inline-block cursor-default bg-orange-faint color-orange-dark border--orange-dark txt-xs"
    >
      <svg
        className="events-none icon inline-block align-t"
        focusable="false"
        role="presentation"
        style={
          Object {
            "height": 18,
            "width": 18,
          }
        }
      >
        <use
          xlinkHref="#icon-alert"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </div>
    <div
      className="hide-visually"
      id="tooltip-8"
      role="tooltip"
    >
      <div
        className="txt-s wmax120"
      >
        This feature is no longer in active development.
      </div>
    </div>
  </div>
</div>
`;
